--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         .clickerContainer img:active {
             transform: scale(0.99);
         }
+
+        .clickerContainer img {
+            transform: scale(1.00);
+        }
         
         .shopButton {
             background-color: #3d3d3d;
