--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </head>
     
     <body  text="white">
-        <div class="sectionLeft">
+        <div class="sectionLeft" text="white">
             <center>
                 <div class="scoreContainer unselectable">
                     <span id="score">0</span> oreo<br>
